force-app/main/default/objects/Application__c/fields/Finance_Expense_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Finance_Expense_Allocation__c</fullName>
    <description>the amount that each hospital/division uses to pay for Sentara overhead</description>
    <inlineHelpText>the amount that each hospital/division uses to pay for Sentara overhead</inlineHelpText>
    <label>Finance Expense Allocation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>