force-app/main/default/objects/Application__c/fields/First_Payment_on_LOA__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_on_LOA__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Does the first payment occur immediately after the LOA is approved?</description>
    <inlineHelpText>Does the first payment occur immediately after the LOA is approved?</inlineHelpText>
    <label>First Payment on LOA</label>
    <type>Checkbox</type>
</CustomField>