force-app/main/default/objects/Application__c/fields/Foundation_Priority__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Priority__c</fullName>
    <label>Foundation Priority</label>
    <length>2050</length>
    <type>LongTextArea</type>
</CustomField>