force-app/main/default/objects/Application__c/fields/Generate_Reports_and_Payments__c.field-meta.xml
<CustomField>
    <fullName>Generate_Reports_and_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to create the required reports and payments for this application</description>
    <inlineHelpText>Check this box to create the required reports and payments for this application</inlineHelpText>
    <label>Generate Reports and Payments</label>
    <type>Checkbox</type>
</CustomField>