force-app/main/default/objects/Application__c/fields/Geographic_Region__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Region__c</fullName>
    <label>Geographic Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System-Wide</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>Eastern NC</fullName>
            </value>
            <value>
                <fullName>Hampton Roads</fullName>
            </value>
            <value>
                <fullName>Northern</fullName>
            </value>
            <value>
                <fullName>Southside</fullName>
            </value>
            <value>
                <fullName>Southwest</fullName>
            </value>
            <value>
                <fullName>Valley</fullName>
            </value>
            <value>
                <fullName>West Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>