force-app/main/default/objects/Application__c/fields/Grant_Category__c.field-meta.xml
<CustomField>
    <fullName>Grant_Category__c</fullName>
    <label>Grant Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Food Security</fullName>
            </value>
            <value>
                <fullName>Skilled Careers</fullName>
            </value>
            <value>
                <fullName>Community_Engagement_Education_Other_Social_Determinants</fullName>
                <label>Community Engagement, Education, Other Social Determinants</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Direct Patient Care</fullName>
            </value>
            <value>
                <fullName>Public Health</fullName>
            </value>
            <value>
                <fullName>Health Equity</fullName>
            </value>
            <value>
                <fullName>University Collaboration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>