force-app/main/default/objects/Application__c/fields/Grant_Portal_Prefill__c.field-meta.xml
<CustomField>
    <fullName>Grant_Portal_Prefill__c</fullName>
    <description>Prefilled hyperlink to the Grant Portal to check application status and submit next report due</description>
    <inlineHelpText>Prefills the Portal link for applicants</inlineHelpText>
    <label>Grant Portal Prefill</label>
    <type>Url</type>
</CustomField>