force-app/main/default/objects/Application__c/fields/Grant_Report_Prefill__c.field-meta.xml
<CustomField>
    <fullName>Grant_Report_Prefill__c</fullName>
    <description>Prefills the grant report</description>
    <inlineHelpText>Prefills the grant report</inlineHelpText>
    <label>Grant Report Prefill</label>
    <type>Url</type>
</CustomField>