force-app/main/default/objects/Application__c/fields/How_will_you_continue_to_fund__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_continue_to_fund__c</fullName>
    <label>How will you continue to fund?</label>
    <length>2250</length>
    <type>LongTextArea</type>
</CustomField>