force-app/main/default/objects/Application__c/fields/Initial_Payment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Payment__c</fullName>
    <label>Initial Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>