force-app/main/default/objects/Application__c/fields/Installment_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Installment_Calculation__c</fullName>
    <formula>Amount_Approved__c  /  Number_of_Installments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>