force-app/main/default/objects/Application__c/fields/Invited_to_apply_date__c.field-meta.xml
<CustomField>
    <fullName>Invited_to_apply_date__c</fullName>
    <description>The date we send the invite. Applications due 2 weeks later</description>
    <inlineHelpText>The date we send the invite. Applications due 2 weeks later</inlineHelpText>
    <label>Invited to Apply Date</label>
    <type>Date</type>
</CustomField>