force-app/main/default/objects/Application__c/fields/LEIE_Exclusion_Date__c.field-meta.xml
<CustomField>
    <fullName>LEIE_Exclusion_Date__c</fullName>
    <description>OIG maintains a list of all currently excluded individuals and entities called the List of Excluded Individuals/Entities (LEIE). Anyone who hires an individual or entity on the LEIE may be subject to civil monetary penalties (CMP).</description>
    <inlineHelpText>The date the analyst determined that the individual or entity was on the LEIE may be subject to civil monetary penalties (CMP).</inlineHelpText>
    <label>LEIE Exclusion Date</label>
    <type>Date</type>
</CustomField>