force-app/main/default/objects/Application__c/fields/LEIE_Exclusion_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LEIE_Exclusion_Indicator__c</fullName>
    <description>OIG maintains a list of all currently excluded individuals and entities called the List of Excluded Individuals/Entities (LEIE). Anyone who hires an individual or entity on the LEIE may be subject to civil monetary penalties (CMP).</description>
    <inlineHelpText>OIG maintains a list of all currently excluded individuals and entities called the List of Excluded Individuals/Entities (LEIE) Yes=Appears on list;,No=Not on List</inlineHelpText>
    <label>LEIE Exclusion Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>