force-app/main/default/objects/Application__c/fields/Length_of_Program_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Program_in_Years__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Length of Program in Years</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>