force-app/main/default/objects/Application__c/fields/LOA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_Due_Date__c</fullName>
    <description>Old 6-28-22: The LOA is the first required report for all grants and sponsorships. If there are multiple installments, then more reports will be created</description>
    <inlineHelpText>Old 6-28-22: The LOA is the first required report for all grants and sponsorships. If there are multiple installments, then more reports will be created</inlineHelpText>
    <label>LOA Due Date</label>
    <type>Date</type>
</CustomField>