force-app/main/default/objects/Application__c/fields/LOA_Receipt_Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>LOA_Receipt_Date_Sent__c</fullName>
    <label>LOA/Receipt Date Sent</label>
    <type>Date</type>
</CustomField>