force-app/main/default/objects/Application__c/fields/LOA_Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>LOA_Receipt_Status__c</fullName>
    <label>LOA/Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Waiting on Someone Else</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Submitted to AP for Payment</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>