force-app/main/default/objects/Application__c/fields/LOA_Received__c.field-meta.xml
<CustomField>
    <fullName>LOA_Received__c</fullName>
    <label>LOA Received</label>
    <type>Date</type>
</CustomField>