force-app/main/default/objects/Application__c/fields/LOA_Status__c.field-meta.xml
<CustomField>
    <fullName>LOA_Status__c</fullName>
    <description>This field is updated by a flow - &quot;Docusign Name Update&quot; , this will return the status of the document from docusign status object. making this as readonly field because we are showing the status of the document.</description>
    <inlineHelpText>The current status of digital signature</inlineHelpText>
    <label>LOA Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>