force-app/main/default/objects/Application__c/fields/LOA_Status_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_Status_Completed_Date__c</fullName>
    <inlineHelpText>The date of the Completed digital signature status.</inlineHelpText>
    <label>LOA Status Completed Date</label>
    <type>Date</type>
</CustomField>