force-app/main/default/objects/Application__c/fields/LOA_status_lights__c.field-meta.xml
<CustomField>
    <fullName>LOA_status_lights__c</fullName>
    <description>Translates status to color</description>
    <formula>IF( LOA_Status__c = &quot;Delivered&quot;, 
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 10, 10),
IF( LOA_Status__c = &quot;Completed&quot;,
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 10),
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 10, 10)
))</formula>
    <inlineHelpText>Completed=Green; Delivered=Yellow; Not Processed=Red</inlineHelpText>
    <label>LOA</label>
    <type>Text</type>
</CustomField>