force-app/main/default/objects/Application__c/fields/LOA_Status_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_Status_Sent_Date__c</fullName>
    <inlineHelpText>The date of the digital signature status sent.</inlineHelpText>
    <label>LOA Status Sent Date</label>
    <type>Date</type>
</CustomField>