force-app/main/default/objects/Application__c/fields/Marketing_Count__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Count__c</fullName>
    <description>Please provide an approximate count of media mentions:</description>
    <inlineHelpText>Please provide an approximate count of media mentions:</inlineHelpText>
    <label>Marketing Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>