force-app/main/default/objects/Application__c/fields/Marketing_Examples__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Examples__c</fullName>
    <description>Please provide examples of internal or external communications where Sentara is mentioned such as links, press releases, social media posts, photos, etc</description>
    <inlineHelpText>Please provide examples of internal or external communications where Sentara is mentioned such as links, press releases, social media posts, photos, etc</inlineHelpText>
    <label>Marketing Examples</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>