force-app/main/default/objects/Application__c/fields/Medicaid__c.field-meta.xml
<CustomField>
    <fullName>Medicaid__c</fullName>
    <label>Medicaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>