force-app/main/default/objects/Application__c/fields/Medicare__c.field-meta.xml
<CustomField>
    <fullName>Medicare__c</fullName>
    <label>Medicare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>