force-app/main/default/objects/Application__c/fields/Microgrant__c.field-meta.xml
<CustomField>
    <fullName>Microgrant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Microgrant</label>
    <type>Checkbox</type>
</CustomField>