force-app/main/default/objects/Application__c/fields/Minimum_for_Logo_Placement__c.field-meta.xml
<CustomField>
    <fullName>Minimum_for_Logo_Placement__c</fullName>
    <label>Minimum for Logo Placement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>