force-app/main/default/objects/Application__c/fields/Multi_Year_Award__c.field-meta.xml
<CustomField>
    <fullName>Multi_Year_Award__c</fullName>
    <description>The approved Award allocated for multiple years</description>
    <inlineHelpText>If the award covers multiple years select &quot;Yes&quot; and Create UDAKs for each year.</inlineHelpText>
    <label>Multi Year Award</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>