force-app/main/default/objects/Application__c/fields/Net_Funds_Anticipated__c.field-meta.xml
<CustomField>
    <fullName>Net_Funds_Anticipated__c</fullName>
    <label>Net Funds Anticipated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>