force-app/main/default/objects/Application__c/fields/Next_Report_Due_ID__c.field-meta.xml
<CustomField>
    <fullName>Next_Report_Due_ID__c</fullName>
    <description>The ID of the next Grant Report/Step Due</description>
    <inlineHelpText>The ID of the next Grant Report/Step Due</inlineHelpText>
    <label>Next Report Due ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>