force-app/main/default/objects/Application__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <inlineHelpText>Rollup of the next task</inlineHelpText>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>