force-app/main/default/objects/Application__c/fields/Number_of_Installments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Installments__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Installments</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>