force-app/main/default/objects/Application__c/fields/Number_of_New_Patients_Prior_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_New_Patients_Prior_Year__c</fullName>
    <label>Number of New Patients Prior Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>