force-app/main/default/objects/Application__c/fields/NUmber_of_People_Served_Proposed__c.field-meta.xml
<CustomField>
    <fullName>NUmber_of_People_Served_Proposed__c</fullName>
    <label>Number of People Served Proposed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>