force-app/main/default/objects/Application__c/fields/Number_of_Seats_Required_for_Table__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Seats_Required_for_Table__c</fullName>
    <description>How many seats need to be purchased to ask for a table</description>
    <inlineHelpText>How many seats need to be purchased to ask for a table</inlineHelpText>
    <label>Number of Seats Required for Table</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>