force-app/main/default/objects/Application__c/fields/Objectives_to_address_CHNA_gap__c.field-meta.xml
<CustomField>
    <fullName>Objectives_to_address_CHNA_gap__c</fullName>
    <label>Objectives to address CHNA gap</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>