force-app/main/default/objects/Application__c/fields/of_Years_for_Award__c.field-meta.xml
<CustomField>
    <fullName>of_Years_for_Award__c</fullName>
    <description>The number of years of the multi-award</description>
    <inlineHelpText>The number of years the multi-award occurs</inlineHelpText>
    <label># of Years for Award</label>
    <length>3</length>
    <type>Text</type>
</CustomField>