force-app/main/default/objects/Application__c/fields/Organization_Information__c.field-meta.xml
<CustomField>
    <fullName>Organization_Information__c</fullName>
    <label>Organization Information</label>
    <length>2750</length>
    <type>Html</type>
</CustomField>