force-app/main/default/objects/Application__c/fields/Other_Cities__c.field-meta.xml
<CustomField>
    <fullName>Other_Cities__c</fullName>
    <label>Other Cities</label>
    <length>200</length>
    <type>Text</type>
</CustomField>