force-app/main/default/objects/Application__c/fields/Other_Funders_3__c.field-meta.xml
<CustomField>
    <fullName>Other_Funders_3__c</fullName>
    <inlineHelpText>The name of the other funder organization</inlineHelpText>
    <label>Other Funders-3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>