force-app/main/default/objects/Application__c/fields/Other_Funders_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Other_Funders_Amount_3__c</fullName>
    <inlineHelpText>The total dollar amount of the other funder organization</inlineHelpText>
    <label>Other Funders Amount 3</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>