force-app/main/default/objects/Application__c/fields/Other_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Other_Services_Provided__c</fullName>
    <label>Other Services Provided</label>
    <type>TextArea</type>
</CustomField>