force-app/main/default/objects/Application__c/fields/Overall_Event_Budget__c.field-meta.xml
<CustomField>
    <fullName>Overall_Event_Budget__c</fullName>
    <label>Overall Event Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>