force-app/main/default/objects/Application__c/fields/Partner_Guidelines_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Partner_Guidelines_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Guidelines Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>