force-app/main/default/objects/Application__c/fields/Partner_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal_URL__c</fullName>
    <formula>HYPERLINK( Grant_Portal_Prefill__c, &quot;Click here to access your Grant Portal&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Portal URL</label>
    <type>Text</type>
</CustomField>