force-app/main/default/objects/Application__c/fields/Partners_for_Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>Partners_for_Professional_Services__c</fullName>
    <inlineHelpText>Required partners or subcontractors and professional services needed to successfully implement the project</inlineHelpText>
    <label>Partners for Professional Services</label>
    <length>2050</length>
    <type>LongTextArea</type>
</CustomField>