force-app/main/default/objects/Application__c/fields/Past_3_Grant_Round_Success__c.field-meta.xml
<CustomField>
    <fullName>Past_3_Grant_Round_Success__c</fullName>
    <label>Past 3 Grant Round Success</label>
    <length>2550</length>
    <type>LongTextArea</type>
</CustomField>