force-app/main/default/objects/Application__c/fields/Percent_current_Total_Budget_for_Program__c.field-meta.xml
<CustomField>
    <fullName>Percent_current_Total_Budget_for_Program__c</fullName>
    <description>The percentage of the project budget to the total organization budget</description>
    <formula>Project_Total_Budget__c / Total_Organization_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage of the project budget to the total organization budget from this form.</inlineHelpText>
    <label>Current % Total Budget for Programs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>