force-app/main/default/objects/Application__c/fields/Percentage_of_Budget_Spent_on_Programs__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Budget_Spent_on_Programs__c</fullName>
    <description>the percentage of the org&apos;s budget spent on programs and services</description>
    <inlineHelpText>the percentage of the org&apos;s budget spent on programs and services</inlineHelpText>
    <label>Percentage of Budget Spent on Programs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>