force-app/main/default/objects/Application__c/fields/Percentage_Requested_to_Org_Budget__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Requested_to_Org_Budget__c</fullName>
    <description>The percentage of the requested amount to the total budget.</description>
    <formula>IF(
    OR(
        ISBLANK(Total_Organization_Budget__c),
        Total_Organization_Budget__c = 0
    ), 0 ,
    Amount_Requested__c / Total_Organization_Budget__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage of the requested amount to the total budget.</inlineHelpText>
    <label>Requested % to Org Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>