force-app/main/default/objects/Application__c/fields/Percentage_Requested_to_Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Requested_to_Project_Budget__c</fullName>
    <description>The percentage of the amount requested to the project budget.</description>
    <formula>IF(
    OR(
        ISBLANK(Project_Total_Budget__c),
        Project_Total_Budget__c = 0
    ), 0 ,
    Amount_Requested__c / Project_Total_Budget__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage of the amount requested to the project budget.</inlineHelpText>
    <label>Requested % to Project Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>