force-app/main/default/objects/Application__c/fields/Population_at_or_Below_Poverty_Level__c.field-meta.xml
<CustomField>
    <fullName>Population_at_or_Below_Poverty_Level__c</fullName>
    <label>Population at or Below Poverty Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>