force-app/main/default/objects/Application__c/fields/Primary_Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Primary Contact)</relationshipLabel>
    <relationshipName>Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>