force-app/main/default/objects/Application__c/fields/Primary_Contact_contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact (c)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>