force-app/main/default/objects/Application__c/fields/Prior_outcomes__c.field-meta.xml
<CustomField>
    <fullName>Prior_outcomes__c</fullName>
    <description>Outcomes from previous sponsorship applications addressing the CHNA gap</description>
    <inlineHelpText>Outcomes from previous sponsorship applications addressing the CHNA gap</inlineHelpText>
    <label>Prior outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>