force-app/main/default/objects/Application__c/fields/Prior_Year_Date_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Date_of_Funding__c</fullName>
    <label>Prior Year Date of Funding</label>
    <type>Date</type>
</CustomField>