force-app/main/default/objects/Application__c/fields/Prior_Year_Funding_ELT__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Funding_ELT__c</fullName>
    <label>Prior Year Funding - ELT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>