force-app/main/default/objects/Application__c/fields/Prior_Year_Funding_From__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Funding_From__c</fullName>
    <label>Prior Year Funding From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sentara Corporate</fullName>
            </value>
            <value>
                <fullName>Sentara Hospital</fullName>
            </value>
            <value>
                <fullName>Optima Health</fullName>
            </value>
            <value>
                <fullName>Virginia Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>