force-app/main/default/objects/Application__c/fields/Prior_Year_Grant__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Grant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Year Grant?</label>
    <type>Checkbox</type>
</CustomField>