force-app/main/default/objects/Application__c/fields/Prior_Year_Grant_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Grant_Explanation__c</fullName>
    <label>Prior Year Grant Explanation</label>
    <length>1050</length>
    <type>LongTextArea</type>
</CustomField>