force-app/main/default/objects/Application__c/fields/Private_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Private_Insurance__c</fullName>
    <label>Private Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>