force-app/main/default/objects/Application__c/fields/Program_Project_Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Project_Brief_Description__c</fullName>
    <label>Program/Project Brief Description</label>
    <length>12000</length>
    <type>Html</type>
</CustomField>