force-app/main/default/objects/Application__c/fields/Program_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Project_Name__c</fullName>
    <label>Program/Project Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>